--- a/web/etc/nginx.conf
+++ b/web/etc/nginx.conf
@@ -1,14 +1,16 @@
 server {
-	listen 127.0.0.1:80;
-	server_name localhost;
-	location ^~/hello/{
-	proxy_pass http://0.0.0.0:8080/;
-	}
- }
-server {
-	listen 127.0.0.1:80;
-	server_name localhost;
-	location / {
-	proxy_pass http://0.0.0.0:8000/;
-	}
+    listen *:80;
+
+    location / {
+        proxy_pass http://0.0.0.0:8000;
+    }
+    location ^~ /hello/ {
+        proxy_pass http://0.0.0.0:8080;
+    }
+    location ^~ /uploads/ {
+        root /home/box/web/;
+    }
+    location ~* \.\w+$ {
+        root /home/box/web/public;
+    }
 }
